--- a/sap586.tex
+++ b/sap586.tex
@@ -33,6 +33,10 @@
 
 \usepackage{fontspec}
 
+%----------
+\usepackage{worldflags}
+%----------
+
 \newcommand{\apple}{\char"F8FF}
 \usepackage{lipsum}
 \usepackage{setspace}
@@ -48,7 +52,7 @@
 	ॐ
 	{\setmainfont{Apple Chancery} \apple}																														\\
 	\href{https://sap586.github.io/LivingSpace/}{$ \Uparrow$}{sagarPanchal}																										\\
-	\small \href{mailto:sap586@nyu.edu}{sap586@nyu.edu}		\textbullet{+1 (607) 314-0114}		\textbullet {NY - 13786}																		\\
+	\small \href{mailto:sap586@nyu.edu}{sap586@nyu.edu}		\textbullet{+1 (607) 314-0114}		\textbullet {Endicott, NY - 13760}																		\\
 	\small \href{https://www.linkedin.com/in/sagar-panchal-55b435122/}{https://www.linkedin.com/in/sagar-panchal-55b435122/}		\textbullet \href{https://sap586.github.io/LivingSpace/}{https://sap586.github.io/LivingSpace/}		\par}
 	
 %Section: About--------------------------------------
