sap586 - 5th aug

--- a/sap586.tex
+++ b/sap586.tex
@@ -11,6 +11,7 @@
 \usepackage{titlesec}					%custom \section
 \usepackage{hyperref}
 \usepackage{lipsum}
+\usepackage{stix}
 %\usepackage{twemojis}
 \definecolor{linkcolour}{rgb}{0,0.2,0.6}
 \hypersetup{colorlinks,breaklinks,urlcolor=linkcolour, linkcolor=linkcolour}
@@ -87,53 +88,50 @@
 %Section: Work--------------------------------------
 \section	{	Work Experience																										}
 %
-\textsc	{	Software Engineer, Universal Instruments, ny																			} \hfill \emph {Sep 22 - present	}	\\
-		{	$\circ$	CS $\circ$ C $\circ$ Machine Automation $\circ$ Computer Vision $\circ$													}	\\
+\textsc	{		Software Engineer, Universal Instruments, ny																			} \hfill \emph {Sep 22 - present	}	\\
+		{	\textbullet	Provide software support to develop Fuzion - Precision Bonder platform 															}	\\
+		{	\textbullet	Cognex Quickbuild integration in Fuzion platform 															}	\\
+		{	\textbullet tech stack  : $\cdot$	CS $\cdot$ C $\cdot$ CPP $\cdot$ Git $\cdot$												}	\\
 
 \begin{spacing}{0.1}
 \end{spacing}
 %
-\textsc	{	Automation Engineer	, nor-cal controls, ca																					} \hfill \emph {Jan 22 - Jul 22	}	\\
-		{	$\circ$	Automation for Solar Power-plants  $\circ$																					}	\\
-		{	$\circ$	Ignition SCADA $\circ$ GE PLC $\circ$ SEL-RTAC $\circ$ Red Lion $\circ$													}	\\
+\textsc	{	 	Automation Engineer	, nor-cal controls, ca																					} \hfill \emph {Jan 22 - Jul 22	}	\\
+		{	$\circ$	Automation software for Solar Power-plants 																					}	\\
+		{	$\circ$	tech stack : $\cdot$ Ignition SCADA $\cdot$ GE PLC $\cdot$ SEL-RTAC $\cdot$ Red Lion $\cdot$													}	\\
 %
 \begin{spacing}{0.1}
 \end{spacing}
-\textsc	{	Software Engineer - Machine Automation, mini-circuits, ny																		} \hfill \emph {Feb 18 - Nov 21	}	\\
-		{	$\circ$ Machine Automation $\circ$ Computer Vision $\circ$ Robotics $\circ$									}	\\
-		{	$\circ$ Java $\circ$	JIRA $\circ$ Git $\circ$													}	\\
-		{	$\circ$ Troubleshooting machine/automation/software issues related to production $\circ$																	}	\\
-		{	$\circ$ Web development: \href{https://www.minicircuits.com/}{https://www.minicircuits.com/}$\circ$										}	\\
-		{	$\circ$ Development and maintenance of Web/Desktop Applications to support Database Maintenance $\circ$													}	\\
-		{	$\circ$ Universal Rotary Machine $\circ$																									}	\\
-		{	$\circ$ Integrated capabilities from different Machines into one to include more range of products to be tested $\circ$												}	\\
-		{	$\circ$ Successfully implemented Visual Inspection on the machine before packing the units $\circ$															}	\\
-		{	$\circ$ Laser Measurement System for Mechanical Switches $\circ$																			}	\\
-		{	$\circ$ An R\&D Project to verify dimensions of Various Switch bodies using a Laser Displacement Sensor $\circ$													}	\\
+\textsc	{		Software Engineer - Machine Automation, mini-circuits, ny																		} \hfill \emph {Feb 18 - Nov 21	}	\\
+		{	$\circ$ 	Provide software support for pick \& place Rotary machines development}	\\
+		{	$\circ$ 	Web development - Back \& Front-end: \href{https://www.minicircuits.com/}{https://www.minicircuits.com/}}	\\
+		{	$\circ$ 	Enterprise application software development}	\\
+		{	$\circ$	tech stack : $\cdot$ Java $\cdot$ JavaFX $\cdot$ HTML $\cdot$ CSS $\cdot$ Javascript $\cdot$													}	\\
 %
 \begin{spacing}{0.1}
 \end{spacing}
-\textsc	{	Developer Intern, revmax fleet optimization, ny																						} \hfill \emph {Sep - Dec 17	}	\\
-		{	$\circ$ Developed Firmware for SidewalkIQ Sensor using Doppler Radar to monitor sidewalk activities $\circ$													}	\\
-		{	$\circ$ Successfully deployed sensors at various NYC locations $\circ$																					}	\\
-		{	$\circ$ R\&D to improve data consistency and efficiency of data storage/transfer to Server for further processing $\circ$												}	\\
+\textsc	{	 	Developer Intern, revmax fleet optimization, ny																						} \hfill \emph {Sep - Dec 17	}	\\
+		{	$\circ$ 	Developed Firmware for SidewalkIQ Sensor using Doppler Radar to monitor sidewalk activities $\circ$													}	\\
+		{	$\circ$ 	Successfully deployed sensors at various NYC locations $\circ$																					}	\\
+		{	$\circ$ 	R\&D to improve data consistency and efficiency of data storage/transfer to Server for further processing $\circ$												}	\\
+		{	$\circ$	tech stack : $\cdot$ Arduino-C $\cdot$ 																										}	\\
 %
 \begin{spacing}{0.1}
 \end{spacing}
-\textsc	{	Instructor (ITEST Program), robotics \& mechatronics dpt., NYU																				} \hfill \emph {May - Aug 17	}	\\
-		{	$\circ$ Mentor to Robotics Club Programming Team for Robotics competitions (First Robotics \& Vex Robotics).												}	\\
-		{	$\circ$ Teaching concepts of Computer Programming to Robotics Club Team.																		}	\\
+\textsc	{		Instructor (ITEST Program), robotics \& mechatronics dpt., NYU																				} \hfill \emph {May - Aug 17	}	\\
+		{	$\circ$ 	Mentor to Robotics Club Programming Team for Robotics competitions (First Robotics \& Vex Robotics).												}	\\
+		{	$\circ$ 	Teaching concepts of Computer Programming to Robotics Club Team.																		}	\\
 %
 \begin{spacing}{0.1}
 \end{spacing}
-\textsc	{	Lead Instructor (CREST Program), center for k12 stem education, NYU																			} \hfill \emph {Feb 18 - Nov 21	}	\\
-		{	$\circ$ Training High School Interns with Computer Programming (Arduino C), IoT, Robotics \& 3D-Printing activities $\circ$											}	\\
-		{	$\circ$ \textsc{Autonomous Car (Mouse in a Maze)} - STM32 Board: \href{https://github.com/sap586/RTES_Project}{https://github.com/sap586/RTES\_Project} $\circ$			}	\\
-		{	$\circ$ \textsc{Wireless Robot Controller} - Arduino: \href{https://github.com/sap586/WirelessRobotDay5Activity}{https://github.com/sap586/WirelessRobotDay5Activity} $\circ$	}	\\
+\textsc	{		Lead Instructor (CREST Program), center for k12 stem education, NYU																			} \hfill \emph {Feb 18 - Nov 21	}	\\
+		{	$\circ$ 	Training High School Interns with Computer Programming (Arduino C), IoT, Robotics \& 3D-Printing activities $\circ$											}	\\
+		{	$\circ$ 	\textsc{Autonomous Car (Mouse in a Maze)} - STM32 Board: \href{https://github.com/sap586/RTES_Project}{https://github.com/sap586/RTES\_Project} $\circ$			}	\\
+		{	$\circ$ 	\textsc{Wireless Robot Controller} - Arduino: \href{https://github.com/sap586/WirelessRobotDay5Activity}{https://github.com/sap586/WirelessRobotDay5Activity} $\circ$	}	\\
 %
 \begin{spacing}{0.1}
 \end{spacing}
-\textsc	{	Design Engineer, prima automation, IN																							} \hfill \emph {Jun 14 - Jan 16	}	\\
+\textsc	{		Design Engineer, prima automation, IN																							} \hfill \emph {Jun 14 - Jan 16	}	\\
 		{	$\circ$ PLC $\circ$ SCADA $\circ$ Siemens $\circ$ Allen-Bradley $\circ$ Front-end (UX) $\circ$																	}	\\													
 		{	$\circ$ Electrical \& Control Panel Layout $\circ$ E-plan $\circ$ AutoCAD $\circ$																}	\\
 %
