--- a/sap586.tex
+++ b/sap586.tex
@@ -54,7 +54,7 @@
 	{\setmainfont{Apple Chancery} \apple}																														\\
 	\href{https://sap586.github.io/LivingSpace/}{$ \Uparrow$}{sagarPanchal}																										\\
 	\small \href{mailto:sap586@nyu.edu}{sap586@nyu.edu}		\textbullet{+1 (607) 314-0114}		\textbullet {Endicott, NY - 13760}																		\\
-	\small \href{https://www.linkedin.com/in/sagar-panchal-55b435122/}{https://www.linkedin.com/in/sagar-panchal-55b435122/}		\textbullet \href{https://sap586.github.io/LivingSpace/}{https://sap586.github.io/LivingSpace/}		\par}
+	\small \href{https://www.linkedin.com/in/sap586/}{https://www.linkedin.com/in/sap586/}		\textbullet \href{https://sap586.github.io/LivingSpace/}{https://sap586.github.io/LivingSpace/}		\par}
 	
 %Section: About--------------------------------------
 \section	{	About		}
