--- a/sap586.tex
+++ b/sap586.tex
@@ -60,7 +60,7 @@
 \section	{	About		}
 	\begin{tabular}{ll}
 		\textsc{	Computer \& Electrical Engineer,					}\\
-		\textsc{	looking forward towards a role that offers better Individual and Professional growth.	}
+		\textsc{	Looking for a Java developer position.	}
 	\\\end{tabular}
 
 
@@ -142,9 +142,9 @@
 %
 
 
-\par	{\hfill
-	{where music meets software, checkout my new project : \href{https://sap586.github.io/beep/}{beepBox} (inspired from https://www.beepbox.co/)}																														\\
-		\par}
+%\par	{\hfill
+%	{where music meets software, checkout my new project : \href{https://sap586.github.io/beep/}{beepBox} (inspired from https://www.beepbox.co/)}																														\\
+%		\par}
 		
 		
 \hrule
