--- a/sap586.tex
+++ b/sap586.tex
@@ -52,27 +52,42 @@
 \par	{\centering
 	ॐ
 	{\setmainfont{Apple Chancery} \apple}																														\\
-	\href{https://sap586.github.io/LivingSpace/}{$ \Uparrow$}{sagarPanchal}																										\\
-	\small \href{mailto:sap586@nyu.edu}{sap586@nyu.edu}		\textbullet{+1 (607) 314-0114}		\textbullet {Endicott, NY - 13760}																		\\
+	\href{https://sap586.github.io/LivingSpace/}{$ \Uparrow$}{sagarPanchal}																								\\
+	\small \href{mailto:sap586@nyu.edu}{sap586@nyu.edu}		\textbullet{+1 (607) 314-0114}		\textbullet {Endicott, NY (open to relocate)}										\\
 	\small \href{https://www.linkedin.com/in/sap586/}{https://www.linkedin.com/in/sap586/}		\textbullet \href{https://sap586.github.io/LivingSpace/}{https://sap586.github.io/LivingSpace/}		\par}
 	
 %Section: About--------------------------------------
 \section	{	About		}
-	\begin{tabular}{ll}
-		\textsc{	Computer \& Electrical Engineer,					}\\
-		\textsc{	Looking for a Java developer position.	}
-	\\\end{tabular}
 
+	\begin{tabular}{lr}
+		\textsc{	Self-motivated, independent \& organized individual.																}\\
+		\textsc{	Looking forward to a role that offers better individual and professional growth.																}
+	\end{tabular}
+	\begin{spacing}{0.5}
+	\end{spacing}
 
+	
+%Section: My Philosophy--------------------------------------
+\section	{	My Philosophy		}
+
+	\begin{tabular}{lr}
+		\textsc{	I believe that humanity is the greatest religion and every one has equal right to educate themselves,													}\\
+		\textsc{	explore, pursue their dreams and live life to the fullest.		}\\
+		\textsc{	We have to become a better human before we can become a good engineer, scientist or an artist.													}
+	\end{tabular}
+	\begin{spacing}{0.5}
+	\end{spacing}
 
 %Section: Education--------------------------------------
 \section	{	Education		}
 	\begin{tabular}{rl}
-		\small{}\textsc{		Jan 2016-17	} 		& 		\textsc{	MS, Electrical \& Computer engineering, 		\small {(3.41/4)}			}	\\
+		\small{}\textsc{		Jan 2016-17	} 		& 		\textsc{	MS, Electrical \& Computer engineering \small { - 3.41/4}			}	\\
  											& 		\textsc{	Polytechnic institute of technology, NYU							}	\\
- 		\small{}\textsc{		Jun 2010-14	} 		& 		\textsc{	BE, Instrumentation \small{\&} Controls,		\small {(7.04/10)}		}	\\
+ 		\small{}\textsc{		Jun 2010-14	} 		& 		\textsc{	BE, Instrumentation \small{\&} Controls		\small { - 7.04/10}		}	\\
  											& 		\textsc{	Svit, GTU													}	\\
 	\end{tabular}
+	\begin{spacing}{0.5}
+	\end{spacing}
 
 %Section: Technical Skills--------------------------------------
 \section{		Skills																													}
@@ -84,14 +99,15 @@
  		\small{}\textsc{		Industries served:		}	& \textsc{					machineries, manufacturing, control panels, solar energy,				}	\\
   												& \textsc{					Education													} 	\\
 	\end{tabular}
+	\begin{spacing}{0.5}
+	\end{spacing}
 
 %Section: Work--------------------------------------
 \section	{	Work Experience																										}
 %
-\textsc	{		Software Engineer, Universal Instruments, ny																			} \hfill \emph {Sep 22 - present	}	\\
-		{	\textbullet	Provide software support to develop Fuzion - Precision Bonder platform 															}	\\
-		{	\textbullet	Cognex Quickbuild integration in Fuzion platform 															}	\\
-		{	\textbullet tech stack  : $\cdot$	CS $\cdot$ C $\cdot$ CPP $\cdot$ Git $\cdot$												}	\\
+\textsc	{		Software Engineer, Universal Instruments Inc., ny																			} \hfill \emph {Sep 22 - present	}	\\
+		{	\textbullet	Software development for Electronics assembly Machines - Fuzion platform															}	\\
+		{	\textbullet tech stack  : $\cdot$	CS $\cdot$ C $\cdot$ CPP $\cdot$ Git $\cdot$ Sourcetree $\cdot$												}	\\
 
 \begin{spacing}{0.1}
 \end{spacing}
@@ -105,7 +121,6 @@
 \textsc	{		Software Engineer - Machine Automation, mini-circuits, ny																		} \hfill \emph {Feb 18 - Nov 21	}	\\
 		{	$\circ$ 	Provide software support for pick \& place Rotary machines development}	\\
 		{	$\circ$ 	Web development - Back \& Front-end: \href{https://www.minicircuits.com/}{https://www.minicircuits.com/}}	\\
-		{	$\circ$ 	Enterprise application software development}	\\
 		{	$\circ$	tech stack : $\cdot$ Java $\cdot$ JavaFX $\cdot$ HTML $\cdot$ CSS $\cdot$ Javascript $\cdot$													}	\\
 %
 \begin{spacing}{0.1}
@@ -148,7 +163,7 @@
 		
 		
 \hrule
-\small 	{	\hfill {This document is prepared using \LaTeX. Click \href{https://raw.githubusercontent.com/sap586/Resume/0beda9d8c8c418c8b1bfaba2cc7f6a1682c933cc/sap586.tex}{here} to download the source code.}\\
+\small 	{	\hfill {This document is prepared using \LaTeX. Click \href{https://raw.githubusercontent.com/sap586/Resume/0beda9d8c8c418c8b1bfaba2cc7f6a1682c933cc/sap586.tex}{here} to download the source code.}
 
 
 \end{document}
