--- a/win/sap586.tex
+++ b/win/sap586.tex
@@ -196,7 +196,7 @@
 		
 		
 \hrule
-\small 	{	\hfill {This document is prepared using \LaTeX. Click \href{https://raw.githubusercontent.com/sap586/Resume/0beda9d8c8c418c8b1bfaba2cc7f6a1682c933cc/sap586.tex}{here} to download the source code.}
+\small 	{	\hfill {This document is prepared using \LaTeX. Click \href{https://github.com/sap586/Resume/blob/05bb3cfd9c2e7bee89acee6b2e3a3fd456201d5d/win/sap586.tex}{here} to download the source code.}
 
 
 \end{document}
