separate resume for remote

--- a/win/sap586.tex
+++ b/win/sap586.tex
@@ -69,7 +69,7 @@
 	\begin{tabular}{lr}
 		\textsc{	Self-motivated, independent \& organized individual.									}\\
 		\textsc{	Quick-learner																			}\\
-		\textsc{	Looking forward to a role that offers better individual and professional growth.		}
+		\textsc{	Ideally looking for a remote position.		}
 	\end{tabular}
 	\begin{spacing}{0.4}
 	\end{spacing}
