separate tex files

--- a/win/sap586-rm.tex
+++ b/win/sap586-rm.tex
@@ -59,7 +59,7 @@
 %	{\setmainfont{Apple Chancery} \apple}																\\
 	\href{https://sap586.github.io/LivingSpace/}{$ \Uparrow$}{sagarPanchal}								\\
 	\small \href{mailto:sap586@nyu.edu}{sap586@nyu.edu}		\textbullet{+1 (607) 314-0114}	
-														\textbullet {Endicott, NY (open to relocate)}	\\
+														\textbullet {Endicott, NY}						\\
 	\small \href{https://www.linkedin.com/in/sap586/}{https://www.linkedin.com/in/sap586/}				\\
 	\small NEEDS SPONSORSHIP																			\par}
 	
@@ -67,9 +67,9 @@
 \section	{	About		}
 
 	\begin{tabular}{lr}
-		\textsc{	Self-motivated, independent \& organized individual.									}\\
-		\textsc{	Quick-learner																			}\\
-		\textsc{	Ideally looking for a remote position.		}
+		\textsc{	Self-motivated, independent \& organized individual.	}\\
+		\textsc{	Quick-learner.		}\\
+		\textsc{	Ideally looking for a remote position.					}
 	\end{tabular}
 	\begin{spacing}{0.4}
 	\end{spacing}
